--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -42,6 +42,10 @@
     --bs-modal-footer-border-color: var(--bs-success-border-subtle);
 }
 
+.pagination-overriden {
+    margin-bottom: 0;
+}
+
 .card:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
