Реализовал все необходимые функции для работы с URL для будущей сортировки в js-файле.

--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -77,8 +77,8 @@
                             </div>
                             <hr />
                             <div class="d-flex flex-row align-items-center justify-content-between">
-                                <button class="btn btn-primary">Применить</button>
-                                <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filter" aria-expanded="false" aria-controls="filter">Отменить</button>
+                                <button class="btn btn-primary" id="filter-apply-button">Применить</button>
+                                <button class="btn btn-outline-primary" type="button" id="filter-clear-button">Отменить</button>
                             </div>
                         </div>
                     </div>
