Перенёс пагинацию во фрагмент для общего использования разными страницами.

--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -129,26 +129,7 @@
             <!---->
         </div>
         <!---->
-        <nav class="mb-5">
-            <ul class="pagination">
-                <li class="page-item">
-                    <button id="first-page" class="page-link" th:classappend="${currentPage == 1} ? 'disabled'">&lt;&lt;</button>
-                </li>
-                <li class="page-item">
-                    <button id="prev-page" class="page-link" th:classappend="${currentPage == 1} ? 'disabled'">&lt;</button>
-                </li>
-                <li class="page-item">
-                    <button id="current-page" class="page-link active" th:text="${currentPage}">1</button>
-                </li>
-                <li class="page-item">
-                    <button id="next-page" class="page-link" th:classappend="${currentPage == pagesCount} ? 'disabled'">&gt;</button>
-                </li>
-                <li class="page-item" th:attr="data-count=${pagesCount}">
-                    <button id="last-page" class="page-link" th:classappend="${currentPage == pagesCount} ? 'disabled'">&gt;&gt;</button>
-                </li>
-            </ul>
-        </nav>
-        <!---->
+        <div th:replace="~{/fragments/pagination/pagination :: pagination}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
         <script src="../../static/js/common/get-params.js" th:src="@{/js/common/get-params.js}"></script>
