Поправил модальные окна, убрал оттуда лишние строки.

--- a/src/main/resources/templates/fragments/headers/anon-header.html
+++ b/src/main/resources/templates/fragments/headers/anon-header.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Заголовок для неаутентифицированного пользователя</title>
     </head>
     <body>
-        <header class="container-fluid bg-dark" th:fragment="anon-header">
+        <header th:fragment="anon-header" class="container-fluid bg-dark">
             <div class="container p-2">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-sm-between">
                     <div class="m-2 my-sm-0">
