--- a/src/main/resources/templates/fragments/footers/footer.html
+++ b/src/main/resources/templates/fragments/footers/footer.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Футер</title>
     </head>
     <body>
-        <footer class="container-fluid bg-dark" th:fragment="footer">
+        <footer th:fragment="footer" class="container-fluid bg-dark">
             <div class="container p-2">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
                     <div class="text-secondary text-center text-md-start m-2 m-md-0">
