--- a/src/main/resources/templates/fragments/headers/admin-header.html
+++ b/src/main/resources/templates/fragments/headers/admin-header.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Заголовок для администратора</title>
     </head>
     <body>
-        <header class="container-fluid bg-dark" th:fragment="admin-header">
+        <header th:fragment="admin-header" class="container-fluid bg-dark">
             <div class="container p-2">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-xl-between">
                     <div class="d-flex flex-row flex-wrap align-items-center justify-content-center">
