--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -12,13 +12,13 @@
         <link rel="icon" type="image/png" sizes="16x16" href="../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
         <!---->
         <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row text-center mb-5" th:if="${!hospitals.empty}">
+            <div class="row text-center mb-5">
                 <div class="col-12">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
                         <h1 class="fs-3 m-2 m-md-0">Список медицинских учреждений</h1>
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <!---->
-            <!--<div class="row" th:if="${!hospitals.empty}">
+            <div class="row">
                 <div class="col-12">
                     <div id="filter" class="collapse">
                         <div class="filter rounded fs-6 p-3 mb-5">
@@ -37,73 +37,6 @@
                                 <div class="mb-auto">
                                     <div class="m-2 m-lg-0">
                                         <h6 class="fs-5">Фильтрация</h6>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="WAITING_CODE"> Ожидают выдачи кода </label>
-                                            <input class="form-check-input" type="radio" name="filtration" id="WAITING_CODE" />
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="WAITING_REGISTRATION"> Ожидают регистрации администратора </label>
-                                            <input class="form-check-input" type="radio" name="filtration" id="WAITING_REGISTRATION" />
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="REGISTERED"> Зарегистрированы </label>
-                                            <input class="form-check-input" type="radio" name="filtration" id="REGISTERED" />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="mb-auto">
-                                    <div class="m-2 m-lg-0">
-                                        <h6 class="fs-5">Сортировка</h6>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="NAME"> Название </label>
-                                            <input class="form-check-input" type="radio" name="sorting" id="NAME" />
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="OID"> OID </label>
-                                            <input class="form-check-input" type="radio" name="sorting" id="OID" />
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="DATE"> Дата </label>
-                                            <input class="form-check-input" type="radio" name="sorting" id="DATE" />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="mb-auto">
-                                    <div class="m-2 m-lg-0">
-                                        <h6 class="fs-5">Поиск</h6>
-                                        <input class="form-control" type="search" name="searching" placeholder="Найти..." />
-                                    </div>
-                                </div>
-                            </div>
-                            <hr />
-                            <div class="d-flex flex-row align-items-center justify-content-between">
-                                <button class="btn btn-primary" id="filter-apply-button">Применить</button>
-                                <button class="btn btn-outline-primary" type="button" id="filter-clear-button">Отменить</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
-            <div class="row" th:if="${!hospitals.empty}">
-                <div class="col-12">
-                    <div id="filter" class="collapse">
-                        <div class="filter rounded fs-6 p-3 mb-5">
-                            <div class="d-flex flex-row flex-wrap align-items-center justify-content-between">
-                                <div class="mb-auto">
-                                    <div class="m-2 m-lg-0">
-                                        <h6 class="fs-5">Фильтрация</h6>
-                                        <!--<div class="form-check">
-                                            <label class="form-check-label" for="WAITING_CODE"> Ожидают выдачи кода </label>
-                                            <input class="form-check-input" type="radio" name="filtration" id="WAITING_CODE" />
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="WAITING_REGISTRATION"> Ожидают регистрации администратора </label>
-                                            <input class="form-check-input" type="radio" name="filtration" id="WAITING_REGISTRATION" />
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="REGISTERED"> Зарегистрированы </label>
-                                            <input class="form-check-input" type="radio" name="filtration" id="REGISTERED" />
-                                        </div>-->
                                         <div class="form-check" th:each="each : ${filtrationProperties}">
                                             <label class="form-check-label" th:for="${each}" th:text="${each.alias}"> Ожидают выдачи кода </label>
                                             <input class="form-check-input" type="radio" name="filtration" th:id="${each}" />
@@ -113,18 +46,6 @@
                                 <div class="mb-auto">
                                     <div class="m-2 m-lg-0">
                                         <h6 class="fs-5">Сортировка</h6>
-                                        <!--<div class="form-check">
-                                            <label class="form-check-label" for="NAME"> Название </label>
-                                            <input class="form-check-input" type="radio" name="sorting" id="NAME" />
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="OID"> OID </label>
-                                            <input class="form-check-input" type="radio" name="sorting" id="OID" />
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="form-check-label" for="DATE"> Дата </label>
-                                            <input class="form-check-input" type="radio" name="sorting" id="DATE" />
-                                        </div>-->
                                         <div class="form-check" th:each="each : ${sortingProperties}">
                                             <label class="form-check-label" th:for="${each}" th:text="${each.alias}"> Название </label>
                                             <input class="form-check-input" type="radio" name="sorting" th:id="${each}" />
