Добавил окно фильтрации и пагинацию на страницу пользователей.

--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -18,12 +18,52 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
-            <div class="row text-center mb-5" th:if="${!users.empty}">
+            <div class="row text-center mb-5">
                 <div class="col-12">
                     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
-                        <h1 class="fs-3 m-2 m-md-0" th:text="${usersListDescription}"></h1>
+                        <h1 class="fs-3 m-2 m-md-0" th:text="${usersListDescription}">Список пользователей</h1>
                         <div class="m-2 m-md-0">
-                            <button class="btn btn-lg btn-primary">Фильтр</button>
+                            <button class="btn btn-lg btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filter" aria-expanded="false" aria-controls="filter" id="filter-button">Фильтр</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!---->
+            <div class="row">
+                <div class="col-12">
+                    <div id="filter" class="collapse">
+                        <div class="filter rounded fs-6 p-3 mb-5">
+                            <div class="d-flex flex-row flex-wrap align-items-center justify-content-between">
+                                <div class="mb-auto">
+                                    <div class="m-2 m-lg-0">
+                                        <h6 class="fs-5">Фильтрация</h6>
+                                        <div class="form-check" th:each="each : ${filtrationProperties}">
+                                            <label class="form-check-label" th:for="${each}" th:text="${each.alias}"> Ожидают выдачи кода </label>
+                                            <input class="form-check-input" type="radio" name="filtration" th:id="${each}" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-auto">
+                                    <div class="m-2 m-lg-0">
+                                        <h6 class="fs-5">Сортировка</h6>
+                                        <div class="form-check" th:each="each : ${sortingProperties}">
+                                            <label class="form-check-label" th:for="${each}" th:text="${each.alias}"> Название </label>
+                                            <input class="form-check-input" type="radio" name="sorting" th:id="${each}" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-auto">
+                                    <div class="m-2 m-lg-0">
+                                        <h6 class="fs-5">Поиск</h6>
+                                        <input class="form-control" type="search" name="searching" placeholder="Найти..." />
+                                    </div>
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="d-flex flex-row align-items-center justify-content-between">
+                                <button class="btn btn-primary" id="filter-apply-button">Применить</button>
+                                <button class="btn btn-outline-primary" type="button" id="filter-clear-button">Отменить</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -65,10 +105,14 @@
                 </div>
             </div>
             <!---->
+            <div th:replace="~{/fragments/pagination/pagination :: pagination}"></div>
+            <!---->
         </div>
         <!---->
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
+        <script src="../../static/js/common/get-params.js" th:src="@{/js/common/get-params.js}"></script>
+        <script src="../../static/js/common/pagination.js" th:src="@{/js/common/pagination.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
